# prediction-agent-spoon

./: pyproject.toml  requirements.txt
orbiton-agent/: .env.backup  .env.example  .env.fixed  .env.template  DEBUG_LOGGING.md  MCP_QUICKSTART.md  MCP_SETUP.md  MCP_UI_FIXES.md  PHASE_4_5_COMPLETE.md  QUICKSTART.md  README.md  TESTING.md  TUI_UPDATE.md  UI_FREEZE_FIX.md  __init__.py  main.py  pyproject.toml  run.sh  run_debug.py  test_api.py  test_curl.sh  test_env.py  test_event_loop.py  test_mcp_config.py  test_mcp_simple.py  test_performance.py  test_phases_4_5.py  test_tui_scroll.py
orbiton-agent/agents/: __init__.py  console_callback.py  factory.py
orbiton-agent/config/: __init__.py  defaults.json  manager.py
orbiton-agent/console/: README.md  TERMINAL_THEME.md  __init__.py  app.py  app_tui.py  commands.py  demo_tui.py  input_handler.py  keybindings.py  renderer.py  theme.py  tui.py
orbiton-agent/docs/: MODEL_CONFIGURATION.md
orbiton-agent/logs/: status_line.json
orbiton-agent/specs/: design.md
orbiton-agent/specs/mvp/: PROGRESS.md  implementation-checklist.md  phase1-setup.md  phase2-console-ui.md  phase3-agent-integration.md  phase4-interactive.md  phase5-state-config.md
orbiton-agent/state/: __init__.py  persistence.py  session.py
